[package]
name = "bevy-midi-graph"
version = "0.1.0"
edition = "2024"

[dependencies.bevy]
version = "0.19.0"
default-features = false
features = ["bevy_asset", "bevy_state"]

[dependencies]
midi-graph = { git = "https://github.com/shining-grimace/midi-graph.git", rev = "7eb974da1920107844ae9a75c67b1b582333f835" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
bevy = { version = "0.19.0" }
avian3d = "0.7.0"
