[package]
name = "bevy-midi-graph"
version = "0.1.0"
edition = "2024"

[dependencies.bevy]
version = "0.19.0"
default-features = false
features = ["bevy_asset", "bevy_state"]

[dependencies]
midi-graph = { git = "https://github.com/shining-grimace/midi-graph.git", rev = "61eba9052d016402a09512ec8ca8911d6ba348d0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
bevy = { version = "0.19.0" }
avian3d = "0.7.0"
